# GearBot-irc

./: .gitignore  .travis.yml  GearBot-irc.cabal  Makefile  README.md  irc-GearBot.cabal
src/: Bot.hs  GearWatcher.hs
