name:                irc-GearBot
version:             0.1.0.0
synopsis:            Posts MountProject.com links to irc channels
description:         Please see README.md
homepage:            http://github.com/kyleondy/GearBot-irc#readme
license:             BSD3
license-file:        LICENSE
author:              Kyle Ondy
maintainer:          kyle@ondy.me
copyright:           2016 Kyle Odndy
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable irc-GearBot
  hs-source-dirs:      src
  main-is:             Bot.hs
  ghc-options:         -threaded -isrc -Wall -Werror -fno-warn-unused-do-bind
  build-depends:       base
                     , network
                     , xml-conduit
                     , html-conduit
                     , http-conduit
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kyleondy/iGearBot-irc
